changes overall color due to contrast issues

--- a/src/components/BestSellers/bestsellers.css
+++ b/src/components/BestSellers/bestsellers.css
@@ -45,7 +45,7 @@
 .bestSeller-subheading {
   font-size: 1rem;
   font-weight: 500;
-  color: #e1e1e1;
+  color: #979797;
   align-self: center;
   /* display: flex;
   justify-content: center;
