--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -46,7 +46,7 @@
 .product-text p {
   font-size: 0.8rem;
   font-weight: 500;
-  color: #e7e7e7;
+  color: #979797;
 }
 
 .product-price {
